--- a/res/style.css
+++ b/res/style.css
@@ -1,6 +1,6 @@
 /*
 Tema Bagus inspired from DaL Net
-htto://goez.my.id
+http://goez.my.id
 */
 *{ margin: 0; padding: 0;} /* reset all tags */
 html{ font-size: 100%;}
